// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it can support anchor tag 1`] = `
<div>
  <a
    class="govuk-button lbh-button"
    href="http://localhost"
  >
    Test Anchor
  </a>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <button
    class="govuk-button lbh-button"
  >
    Test Button
  </button>
</div>
`;

exports[`it shows a loading state 1`] = `
<div>
  <button
    class="govuk-button lbh-button"
  >
    <span
      class="button-loading-indicator"
    >
      <span>
        Loading...
      </span>
    </span>
    Test Button
  </button>
</div>
`;
